# stspy

./: pyproject.toml
src/: correlation.ipynb  dispersion_measurements.ipynb  form_measurements.ipynb  get_started.ipynb  graphical_representations.ipynb  intro.ipynb  position_measurements.ipynb  variables.ipynb
