[tool.poetry]
name = "stspy"
version = "0.1.0"
description = ""
authors = ["charmingruby <mrrubycanal3105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
